# pg-maintainer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.toml  docker-compose.test.yml
.github/workflows/: release.yml  rust.yml  security.yml
schema/: setup_test_schema.sql
scripts/: docker-integration-test.sh
src/: config.rs  connection.rs  credentials.rs  lib.rs  logging.rs  main.rs  operations.rs  queries.rs  schema.rs  types.rs  vacuum_output.rs
tests/: cli_validation.rs  logging_and_dry_run.rs  unit_tests.rs
