[package]
name = "pg-maintainer"
version = "1.0.0"
edition = "2024"
description = "PostgreSQL table maintenance tool — vacuum, analyze, and anti-wraparound freeze"
categories = ["database", "command-line-utilities"]
keywords = ["postgres", "postgresql", "vacuum", "maintenance", "freeze"]
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time", "signal"] }
tokio-postgres = "0.7"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
native-tls = { version = "0.2", features = ["vendored"] }
postgres-native-tls = "0.5"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
zeroize = { version = "1", features = ["zeroize_derive"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
tokio-test = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
